# customer-churn-etl

./: .gitignore  README.md  main.py  pyproject.toml
dags/: etl_pipeline.py
data/: telco_churn_clean.csv  transformed_data.csv
documentos/: Primera Entrega ETL.docx  Segunda Entrega ETL.docx  ~$imera Entrega ETL.docx
etl/: extract.py  load.py  transform.py
evidencias/: datos_limpiados_estadisticas.csv  datos_limpiados_valores_nulos.csv  log_carga.txt  log_carga_transformados.txt  log_error.txt  log_extraccion.txt  transformacion_muestra.csv
notebooks/: EDA.ipynb
